--- a/spice_mystyle.css
+++ b/spice_mystyle.css
@@ -191,3 +191,11 @@ body{
     font-family: fantasy;
     font-size: 30;
 }
+
+@media (max-width:550px)
+{
+    #ul2{
+        text-align: center;
+        font-size: 20px;
+    }
+}
