--- a/spice_mystyle.css
+++ b/spice_mystyle.css
@@ -1,6 +1,6 @@
 body{
-                margin: 0;
-                width: 100%;
+                margin:0;
+                width: 99.7%;
                 background-color: beige;
             }
             .container1{
@@ -132,7 +132,7 @@ body{
 
 .container34{
     display: flex;
-    padding-right: 25;
+    padding-right: 1.5em;
 }
 
 
@@ -198,5 +198,62 @@ body{
     #ul2{
         text-align: center;
         font-size: 20px;
+    }
+}
+
+#insta{
+    font-size: 3.5em;
+    color: deeppink;
+}
+
+#insta:hover{
+    box-shadow: 2px 2px 2px 2px deeppink;
+}
+
+#fb{
+    font-size: 3.5em;
+    color: #07367b;
+}
+
+#fb:hover{
+    
+}
+
+#whatsapp{
+    font-size: 3.5em;
+    color: green;
+}
+
+#whatsapp:hover{
+    color: green;
+}
+
+#utube{
+    color: red;
+    font-size: 3.5em;
+}
+
+#socialtext{
+    font-family: cursive;
+    font-size:25;
+    margin-top: 0.5em;
+}
+
+.social{
+    display: flex;
+    justify-content: space-around;
+}
+
+.social1{
+    display: flex;
+    justify-content: space-around;
+    margin-left: 1.5em;
+}
+
+@media (max-width:550px)
+{
+    .social{
+        flex-direction: column;
+        text-align: center;
     }
 }
