--- a/spice_mystyle.css
+++ b/spice_mystyle.css
@@ -362,3 +362,33 @@ animation-iteration-count: infinite;
         margin-top: 20px;
     }
 }
+
+
+.container_aboutUs{
+    border: 2px rgb(179,45,21) solid;
+    box-shadow: 0px 0px 0px 2px yellow;
+    display: flex;
+    justify-content: space-between;
+    color: rgb(179,45,21);
+}
+
+#aboutUs1{
+    margin-left: 15px;
+    width: 50%;
+}
+#aboutUs2{
+    width: 50%;
+}
+
+@media (max-width: 550px)
+{
+    .container_aboutUs{
+        flex-direction: column;
+        margin-left: 1em;
+        
+    }
+    
+    #aboutUs1,#map{
+        width: 100%;
+    }
+}
