--- a/color_guess_game.css
+++ b/color_guess_game.css
@@ -23,18 +23,15 @@
     background-color: white;
 }
 
-#hard_easy{
+#hard_easy,#new_color_span,#tryAgain{
     padding: 0.3em;
-}
-#new_color_span{
-    padding: 0.3em
 }
 
 #hard_span,#easy_span{
     padding: 0.3em;
 }
 
-#new_color_span:hover{
+#new_color_span:hover,#hard_span:hover,#easy_span:hover{
     
     color: white;
     background-color: blueviolet;
@@ -62,7 +59,6 @@
 
 .column{
     color: white;
-    border: 2px red solid;
     padding: 4em;
     border-radius: 20px;
     margin-right:0.5em;
