--- a/patatap_clone.css
+++ b/patatap_clone.css
@@ -2,4 +2,13 @@ body,html,canvas{
     width: 100%;
     height: 100%;
     margin: 0;
+     background-color: black;
+}
+
+input{
+    padding: 10;
+    width: 200;
+    background-color: aqua;
+    margin-top: 300;
+    box-sizing: border-box
 }
