--- a/spice_mystyle.css
+++ b/spice_mystyle.css
@@ -1,8 +1,9 @@
-body{
+            body{
                 margin:0;
                 width: 99.7%;
                 background-color: beige;
             }
+
             .container1{
                 border:2px solid rgb(189,19,91);
                 background-color: rgb(179,45,21);
@@ -342,9 +343,9 @@ animation-iteration-count: infinite;
 
 @keyframes owner{
  
-    33%{background-image: url(owner2.jpg)}
-    66%{background-image: url(owner3.jpg)}
-    100%{background-image: url(owner4.jpg)}
+    33%{background-image: url(owner.jpg)}
+    66%{background-image: url(owner.jpg)}
+    100%{background-image: url(owner.jpg)}
     }
 
 @media (max-width:550px)
