--- a/homePage.css
+++ b/homePage.css
@@ -1,5 +1,6 @@
 body{
     background-image: url(nightsky.jpg);
+    background-attachment: fixed;
 }
 
 .form-control{
@@ -11,6 +12,7 @@ body{
     text-align: center;
     letter-spacing: 1px;
     background-image: url(nightsky.jpg);
+    background-attachment: fixed;
     font-weight: 80;
 }
 
@@ -19,16 +21,35 @@ body{
 }
 
 .row{
-    padding:;
+    
 }
 .col-sm-6{
+    display: flex;
+    flex-direction: column;
     text-align: center;
     padding: 20;
 }
+
+
 .gallery_span{
-    color: rgb(189,15,91);
+    color: white;
+    padding: 7;
+    font-weight:600;
+    background-image: url("nightsky.jpg");
+    height: 40;
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 1px 1px aliceblue;
+    
 }
 
+.img-thumbnail{
+    background-image: url("nightsky.jpg");
+}
+
+a{
+    color: white;
+}
 
 .fas-dropdown{
     color: rgb(189,15,91);
